[add] query param for get_tssks
