# docs/swagger.json
@@ -17,11 +17,46 @@
                     "tasks"
                 ],
                 "summary": "Get tasks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "contains for name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "filter status_id",
+                        "name": "status_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "sort by value",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "order by asc or desc",
+                        "name": "order",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.ListTaskResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "500": {
@@ -297,7 +332,7 @@
         "response.TaskResponse": {
             "type": "object",
             "properties": {
-                "create_at": {
+                "created_at": {
                     "type": "string"
                 },
                 "description": {
@@ -312,7 +347,7 @@
                 "status_id": {
                     "type": "integer"
                 },
-                "update_at": {
+                "updated_at": {
                     "type": "string"
                 }
             }
