# internal/interface/api/rest/dto/response/task_response.go
@@ -7,8 +7,8 @@ type TaskResponse struct {
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
 	StatusId    int       `json:"status_id"`
-	CreatedAt   time.Time `json:"create_at"`
-	UpdatedAt   time.Time `json:"update_at"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 }
 
 type ListTaskResponse struct {
